[package]
name = "srt_rtmp"
description = "SRT to RTMP"
repository = "https://github.com/Eyevinn/srt-rtmp"
license = "Apache-2.0"
version = "1.2.0"
authors = ["Kun Wu <kun.wu@eyevinn.se>; Jonas Birmé <jonas.birme@eyevinn.se>"]
edition = "2021"
exclude = [
  "docs/*",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "srt-rtmp"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.193"
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.1.1"
thiserror = "1.0.24"
serde-aux = "4"
unicode-segmentation = "1.12.0"
anyhow = "1.0.100"
validator = "0.16"
secrecy = { version = "0.8", features = ["serde"] }
futures = "0.3.28"
glib = "0.18.1"
gstreamer = "0.21.0"
gstreamer-pbutils = "0.21.0"
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "1.0.109"
derive_more = "0.99.20"
toml = "0.7.5"
timed-locks = "0.1.1"
tokio-async-drop = "0.1.0"

[dev-dependencies]
once_cell = "1.21.3"
claims = "0.7.0"
wiremock = "0.5"
reqwest = { version = "0.11", features = ["json"] }
